--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,8 +66,7 @@ jobs:
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: inseefr/queen
+          name: inseefrlab/massive-attack
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           tags: ${{steps.version.outputs.prop}}
-   
