--- a/public/configuration.json
+++ b/public/configuration.json
@@ -1,15 +1,15 @@
 {
-  "MASSIVE_ATTACK_API_URL": "https://url.to.massive-attack.api",
+  "MASSIVE_ATTACK_API_URL": "${MASSIVE_ATTACK_API_URL}",
   "_MASSIVE_ATTACK_API_URL_COMMENT_": "url of Massive-Attack API",
 
-  "AUTHENTICATION_MODE": "keycloak",
+  "AUTHENTICATION_MODE": "${AUTHENTICATION_MODE}",
   "_AUTHENTICATION_MODE_COMMENT": "The mode of authentication. ['anonymous','keycloak' ]",
 
-  "PLATEFORM":"TRAINING",
+  "PLATEFORM":"${PLATEFORM}",
   "_PLATEFORM_COMMENT":"The API may be connected to multiple environnements. [PRODUCTION, TRAINING]",
 
-  "ADMIN_ROLE":"admin",
-  "USER_ROLES":["manager", "Guest"]
+  "ADMIN_ROLE":"${ADMIN_ROLE}",
+  "USER_ROLES":"${USER_ROLES}"
 
 
 }
