add constraint no empty value for label

--- a/public/configuration.json
+++ b/public/configuration.json
@@ -1,15 +1,13 @@
 {
-  "MASSIVE_ATTACK_API_URL": "${MASSIVE_ATTACK_API_URL}",
+  "MASSIVE_ATTACK_API_URL": "https://api.organisation-formations.enquetes.developpement.insee.fr/",
   "_MASSIVE_ATTACK_API_URL_COMMENT_": "url of Massive-Attack API",
 
-  "AUTHENTICATION_MODE": "${AUTHENTICATION_MODE}",
+  "AUTHENTICATION_MODE": "keycloak",
   "_AUTHENTICATION_MODE_COMMENT": "The mode of authentication. ['anonymous','keycloak' ]",
 
-  "PLATEFORM":"${PLATEFORM}",
-  "_PLATEFORM_COMMENT":"The API may be connected to multiple environnements. [PRODUCTION, TRAINING]",
+  "PLATEFORM": "DV",
+  "_PLATEFORM_COMMENT": "The API may be connected to multiple environnements. [PRODUCTION, TRAINING]",
 
-  "ADMIN_ROLE":"${ADMIN_ROLE}",
-  "USER_ROLES":"${USER_ROLES}"
-
-
+  "ADMIN_ROLE": "administrateurmoog_Capi3G",
+  "USER_ROLES": "gestionnairelocal_Capi3G"
 }
