--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "massive-attack",
-  "version": "2.3.2",
+  "version": "2.4.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -13,7 +13,7 @@
     "date-fns": "^2.25.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
-    "keycloak-js": "^14.0.0",
+    "oidc-spa": "^5.6.1",
     "papaparse": "^5.4.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -24,7 +24,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -91,6 +91,7 @@
   "devDependencies": {
     "@types/react": "^16.9.23",
     "@types/react-router-dom": "^5.1.3",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "copy-and-watch": "^0.1.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
