--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "massive-attack",
-  "version": "2.3.2",
+  "version": "2.4.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -13,19 +13,19 @@
     "date-fns": "^2.25.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
-    "keycloak-js": "^14.0.0",
+    "oidc-spa": "^5.6.1",
     "papaparse": "^5.4.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -89,6 +89,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^16.9.23",
     "@types/react-router-dom": "^5.1.3",
     "copy-and-watch": "^0.1.4",
